--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,50 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This README would normally document whatever steps are necessary to integrate the
+Twilio API into  a Rails Application .
 
-Things you may want to cover:
+First install gem in Gemfile:
 
-* Ruby version
+Gemfile:
 
-* System dependencies
+gem 'twilio-ruby'
 
-* Configuration
+and then 
 
-* Database creation
+bundle install
 
-* Database initialization
+Get AccountID, Auth Token  and a twilio number from Twilio Account and use them in your application.
 
-* How to run the test suite
+For example:
 
-* Services (job queues, cache servers, search engines, etc.)
+      client = Twilio::REST::Client.new(AccountSid, AuthToken)
+      
+Use your Twilio number to send and recieve messages and calls etc.,
 
-* Deployment instructions
+For example you can send messages to any other numbers like this:
 
-* ...
+     client.account.messages.create(:from => "TwilioNumber",
+                                    :to => "Your desired Number",
+                                    :body => "Some text you want to send")
+
+You can get more details about the usage of Twilio here: https://www.twilio.com/docs
+
+You can get more information about twilio-ruby gem here: https://github.com/twilio/twilio-ruby
+
+You can clone this app and verify supported features of twilio API in rails application.
+
+git clone https://github.com/anusha-nyros/twilio_api.git
+
+bundle install
+
+create new database.yml file and use your database credentials.
+
+create new twilio.yml file(config/twilio.yml) and place your twilio credentials in that file.
+
+create new secrets.yml file and get the secret tokens by executing this command: rake secrets
+
+rake db:migrate
+
+start your server rails s and enjoy the taste of Twilio API.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
